--- a/XSourceNote/Info.plist
+++ b/XSourceNote/Info.plist
@@ -46,7 +46,7 @@
 		<string>ACA8656B-FEA8-4B6D-8E4A-93F4C95C362C</string>
 	</array>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.4.0</string>
+	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSPrincipalClass</key>
 	<string>XSourceNote</string>
 	<key>XC4Compatible</key>
